=========
Changelog
=========

0.2.14 (unreleased)
===================

- Don't use `bin/buildout bootstrap` command anymore. PIP installs a sufficient
  `bin/buildout` so buildout can do the rest internally.

- Install zc.buildout during bootstrapping phase using PIP to avoid
  bootstrap.py problems.


0.2.13 (2013-08-01)
===================

- Switch to asking pip installing eggs instead of flat installations as
  namespaces seem to collide otherwise.

- Remove non-functional deprecated 'md5sum' attribute.


0.2.12 (2013-07-26)
===================

- Another attempt at getting convergency for package installation: actually
  leverage pkg_resources to check what version of a package is installed. PIP
  does not necessarily list or freeze setuptools, even if forced to reinstall.

0.2.11 (2013-07-25)
===================

- More resilience for creating virtualenvs for old python versions: provide a
  bootstrapping venv that carries a compatible venv package to create the
  actual virtualenv. Brr.

- Rewrite PIP interaction with the installed database: don't need YAML any
  longer and works with old versions of PIP that are required to work with
  Python 2.4.

- Allow specifying the PIP version on the buildout master component.

- Make bootstrapping virtualenv with correct setuptools version more reliable.

- Silence verification command for virtualenv pkg_resources availability.

- Support upgrading SVN working copies using the 'svn upgrade' command if necessary.

0.2.10 (2013-07-15)
===================

- Backport buildout/virtualenv handling from 1.x branch (mostly due to
  distribute/setuptools merge, but brings nice additional robustness).

- Add ``exclude`` parameter to Directory component.


0.2.9 (2013-07-06)
==================

- Fix #12527: utils.cmd breaks on spacey arguments and embedded quotes.

- Avoid accidentally creating incorrect directories in developer VFS mapping.

- Switch testrunner to pytest. Refactor some tests to take advantage of its